--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-vue": "^0.1.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-toastification": "^2.0.0-rc.5"
